--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -60,7 +60,7 @@
 				<ul>
 					<li>
 						<a href="{{ asset('doc/Statuts.pdf') }}" target="_blank">
-							Mentions légales
+							Status de l'association
 						</a>
 					</li> 
 					<span class="red"> — </span>
