--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -105,8 +105,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="top_menu_dropdown">
       <ul class="nav navbar-nav">
-      	<li  class="border_right_li" id="btn_header1">
-			<a href="{{ path('ma_main_homepage') }}#actu" id="btn_section6">
+      	<li  class="li_mobile border_bottom_white" id="btn_header1">
+			<a href="{{ path('ma_main_homepage') }}#actu" id="btn_section6" class="link_in_dropdown">
 				L'actualité
 			</a>
 		</li>
@@ -134,30 +134,30 @@
 	          	</li>
 		    </ul>
 		</li>
-		<li  class="border_right_li" id="btn_header5">
-			<a href="{{ path('ma_main_homepage') }}#nosBesoins" id="btn_section5">
+		<li  class="li_mobile border_bottom_white" id="btn_header5">
+			<a href="{{ path('ma_main_homepage') }}#nosBesoins" id="btn_section5" class="link_in_dropdown">
 				Nos besoins
 			</a>
 		</li>
-		<li class="dropdown border_right_li" id="btn_header6">
+		<li class="dropdown li_mobile border_bottom_white" id="btn_header6">
 		    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
 		      L'association <span class="caret"></span>
 		    </a>
 		    <ul class="dropdown-menu" role="menu">
 		    	<li>
-	          		<a href="{{ path('ma_main_homepage') }}#assoc"  id="btn_section6">
+	          		<a href="{{ path('ma_main_homepage') }}#assoc"  id="btn_section6" class="link_in_dropdown">
 	          			Qui sommes-nous ?
 	          		</a>
 	          	</li>
 	          	<hr/>
 	          	<li>
-	          		<a href="{{ path('ma_main_homepage') }}#assoc">
+	          		<a href="{{ path('ma_main_homepage') }}#assoc" class="link_in_dropdown">
 	          			La charte
 	          		</a>
 	          	</li>
 	          	<hr/>
 	          	<li>
-	          		<a href="{{ path('ma_main_homepage') }}#assoc">
+	          		<a href="{{ path('ma_main_homepage') }}#assoc" class="link_in_dropdown">
 	          			Quelques repères
 	          		</a>
 	          	</li>
