last modif before relecture

--- a/app/Resources/views/includes/button_on_side.html.twig
+++ b/app/Resources/views/includes/button_on_side.html.twig
@@ -5,7 +5,51 @@
 <div class="
 	{% if (route == 'ma_main_helpUs_contact_thankYou') 
         or (route == 'ma_main_footer_contact_thankYou')
-        or (route == 'ma_main_helpUs') %}
+        or (route == 'ma_main_helpUs') 
+		or (route == 'ma_user_homepage')
+		or (route == 'ma_user_articles')
+		or (route == 'ma_user_article_spe')
+		or (route == 'ma_user_article_edit')
+		or (route == 'ma_user_article_delete')
+		or (route == 'ma_user_article_new')
+		or (route == 'ma_user_photos')
+		or (route == 'ma_user_photos_spe')
+		or (route == 'ma_user_photo_new')
+		or (route == 'ma_user_photo_delete')
+		or (route == 'ma_user_videos')
+		or (route == 'ma_user_videos_spe')
+		or (route == 'ma_user_videos_spe_video')
+		or (route == 'ma_user_video_new')
+		or (route == 'ma_user_video_edit')
+		or (route == 'ma_user_video_delete')
+		or (route == 'ma_user_nosBesoins')
+		or (route == 'ma_user_nosBesoins_elementAjax')
+		or (route == 'ma_user_person_new')
+		or (route == 'ma_user_project_new')
+		or (route == 'ma_user_person_edit')
+		or (route == 'ma_user_project_edit')
+		or (route == 'ma_user_person_delete')
+		or (route == 'ma_user_project_delete')
+		or (route == 'ma_user_content')
+		or (route == 'ma_user_content_spe')
+		or (route == 'ma_user_content_new')
+		or (route == 'ma_user_content_edit')
+		or (route == 'ma_user_content_delete')
+		or (route == 'ma_user_diapos')
+		or (route == 'ma_user_diapos_new')
+		or (route == 'ma_user_diapos_delete')
+		or (route == 'ma_user_BG_photos')
+		or (route == 'ma_user_BG_photos_new')
+		or (route == 'ma_user_BG_photos_edit')
+		or (route == 'ma_user_BG_photos_delete')
+		or (route == 'ma_user_aides')
+		or (route == 'ma_user_aides_new')
+		or (route == 'ma_user_aides_edit')
+		or (route == 'ma_user_aides_delete')
+		or (route == 'ma_user_partners')
+		or (route == 'ma_user_partners_new')
+		or (route == 'ma_user_partners_edit')
+		or (route == 'ma_user_partners_delete') %}
 		hidden-lg hidden-md hidden-sm hidden-xs
 	{% else %}
 		hidden-xs
